add: camera function, need function for the browser

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,6 @@
 platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
-
 monitor_speed = 115200
 
 board_build.arduino.memory_type = qio_opi
@@ -20,4 +19,4 @@ board_build.arduino.memory_type = qio_opi
 build_flags = 
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT=1
-
+    -DARDUINO_USB_MODE=1
